# nami

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pixi.toml  pyproject.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yaml  docs.yaml
books/experiment/: index.rst
books/experiment/coupling/: index.rst  ot-couplings.ipynb
books/experiment/generators/: a_simple_generator.ipynb  conditional-generator-matching.ipynb  index.rst  inpainting.ipynb
books/experiment/interpolants/: index.rst  interpolant-transforms.ipynb
books/experiment/masking/: index.rst
books/experiment/morphing/: index.rst  morphing-bernstein.ipynb  morphing-hep-toy.ipynb
books/experiment/pm/: concepts.ipynb  ctsm-time-scores.ipynb  gallery.ipynb  index.rst  parameter-flow-1d.ipynb  parameter-flow-2d.ipynb  parameter-flow-pgauss.ipynb  pm_utils.py
books/experiment/reparameterise/: fine-tune.ipynb  index.rst
books/experiment/sbi/: index.rst  on-off-sbi.ipynb
books/test/: first.ipynb  int-test.ipynb  int-test.py  profiling-solver-logprob.ipynb  stochastic-fm-loss.ipynb
books/toys/: index.rst  nami-toys.ipynb
books/tutorials/: index.rst  tutorial_utils.py
docs/: components.rst  conf.py  examples.rst  experiments.rst  index.rst  models.rst  overview.rst  quickstart.rst
docs/_static/: custom.css
docs/api/: components.rst  core.rst  fields.rst  generators.rst  index.rst  interpolants.rst  losses.rst  misc.rst  paths.rst  processes.rst  scores.rst  solvers.rst  summary.md  top_level.rst  toys.rst
docs/how-to/: bridge-matching.rst  compute-log-likelihood.rst  condition-on-context.rst  convert-parameterizations.rst  index.rst  sample-with-diffusion.rst  sanity-check-zero-gamma.rst  swap-interpolant.rst  train-consistency-flow-matching.rst  train-flow-matching.rst  train-generator-matching.rst  train-stochastic-flow-matching.rst
docs/principles/: core-abstractions.rst  index.rst  lazy-binding.rst  model-families.rst  numerical-considerations.rst  parameterizations.rst
src/nami/: __init__.py  _version.py  diagnostics.py  diffusion.py  lazy.py  masking.py  parameterizations.py  py.typed
src/nami/components/: __init__.py  activation.py  mlp.py  time.py  transformer.py
src/nami/core/: __init__.py  broadcast.py  specs.py  typing.py
src/nami/distributions/: __init__.py  base.py  mask.py  normal.py
src/nami/divergence/: __init__.py  base.py  exact.py  hutchinson.py
src/nami/fields/: __init__.py  _common.py  action.py  adaln.py  base.py  composite.py  consistency.py  ctmc.py  generator.py  scalar_potential.py  transformer.py  transformer_velocity.py  velocity.py
src/nami/generators/: __init__.py  base.py  ctmc.py  operators.py  parameterizations.py
src/nami/interpolants/: __init__.py  _common.py  bridge.py  cosine.py  gamma.py  gaussian.py  linear.py  masking.py  protocol.py  transforms.py
src/nami/losses/: __init__.py  _common.py  action.py  bregman.py  bridge.py  cgm.py  consistency.py  log_density.py  parameter_flow.py  regression.py  score_matching.py  stochastic_fm.py
src/nami/paths/: __init__.py  base.py  bridge.py  cosine.py  linear.py  parameter.py
src/nami/processes/: __init__.py  _common.py  action.py  consistency.py  diffusion.py  fm.py  gm.py  parameter_flow.py
src/nami/schedules/: __init__.py  base.py  edm.py  ve.py  vp.py
src/nami/scores/: __init__.py  base.py  ctsm.py  dsm.py  mined.py  oracle.py
src/nami/solvers/: __init__.py  dpm.py  heun.py  jump.py  ode.py  sde.py
src/nami_toys/: __init__.py  checkerboard.py  dataset.py  gaussian.py  moons.py  parameterised.py  ring.py  rng.py  shell.py  spirals.py  standardise.py
tests/: conftest.py  test_base_contracts.py  test_diagnostics.py  test_flow_matching.py  test_forward_compat.py  test_normal_distributions.py  test_parameterizations.py  test_schedule_constructor_validation.py
tests/components/: test_components.py
tests/core/: test_broadcast.py  test_specs.py
tests/divergence/: test_create_graph.py
tests/fields/: test_adaln.py  test_composite.py  test_scalar_heads.py  test_scalar_potential.py  test_transformer.py  test_velocity.py
tests/generators/: test_base_operator.py
tests/interpolants/: test_bridge.py  test_cosine.py  test_gamma_schedules.py  test_gaussian.py  test_interpolant_transforms.py  test_linear.py
tests/losses/: test_action_loss.py  test_bregman.py  test_bridge_matching.py  test_cgm_loss.py  test_consistency.py  test_gm.py  test_log_density.py  test_parameter_flow_loss.py  test_regression.py  test_score_matching.py  test_stochastic_fm.py
tests/masking/: test_masking.py
tests/paths/: test_base_path.py  test_bridge_path.py  test_parameter.py
tests/processes/: test_action_process.py  test_common.py  test_consistency_flow_matching.py  test_ctmc_generator.py  test_diffusion.py  test_generator_matching.py  test_parameter_flow.py  test_parameter_flow_mutli_path.py  test_parameter_flow_no_oracle.py
tests/scores/: test_scores.py
tests/solvers/: test_dpm.py  test_heun.py  test_solver_edges.py
tests/toys/: test_toys.py
