[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "nami"
authors = [
  { name = "Levi Evans", email = "levi.samuel.evans@cern.ch" },
]
description = "library for flow-based generative models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
version = "0.1.0"

dependencies = [
  "torch >= 2.0.0",
  ]

[project.urls]


[dependency-groups]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  { include-group = "test" },
]
docs = [
  "sphinx>=7.0",
  "myst-nb>=1.1.0",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "pydata-sphinx-theme>=0.16",
]

[tool.pixi.workspace]
authors = ["Levi Evans <levi.samuel.evans@cern.ch>"]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.tasks]
setup = "python -m pip install -e ."
test = "pytest -q"
cov = "pytest --cov --cov-report=term-missing"
lint = "ruff check src tests"
fmt = "ruff format src tests"
typecheck = "mypy"
docs = "LC_ALL= LC_CTYPE= sphinx-build -a -E -b html docs docs/_build/html"
docs-serve = "LC_ALL= LC_CTYPE= sphinx-autobuild -a -E --host 127.0.0.1 --port 8000 --watch src/nami --ignore docs/books docs docs/_build/html"
build = "hatch build"
kernel = "python -m ipykernel install --user --name nami"

[tool.pixi.environments]
default = { features = ["docs", "lint", "test"], solve-group = "default" }

[tool.pixi.dependencies]
pytorch = ">=2.10.0,<3"
pip = ">=25.3,<26"
ipykernel = ">=7.1.0,<8"
matplotlib = ">=3.10.8,<4"
scipy = ">=1.17.0,<2"

[tool.pixi.feature.test.dependencies]
pytest = ">=9.0.0,<10"
pytest-cov = ">=7.0.0,<8"

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.15.5,<0.16"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.0.0,<9"
sphinx-autobuild = ">=2024.10.3,<2025"
pydata-sphinx-theme = ">=0.16.1,<0.17"
myst-nb = ">=1.1.0,<2"
sphinx-copybutton = ">=0.5.2,<0.6"
sphinx-autodoc-typehints = ">=3.2.0,<4"


[tool.hatch.build.targets.wheel]
packages = ["src/nami", "src/nami_toys"]

[tool.hatch]

[tool.hatch.envs.default]
# duplicate for now since hatch doesn't support groups yet
dependencies = []
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]
markers = [
    "basic: marks tests as basic sanity checks",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring multiple components",
]


[tool.coverage]
run.source = ["nami"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.12"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "nami.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.11"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
