[build-system]
requires = ["hatchling>=1.26", "hatch-vcs>=0.5"]
build-backend = "hatchling.build"

[project]
name = "nami"
authors = [
  { name = "Levi Evans", email = "levi.samuel.evans@cern.ch" },
  { name = "Stephen Jiggins"},
  { name = "Kylian Schmidt"},
  { name = "Nino Kovacic"},

]
description = "A library for composable transport maps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]

dependencies = [
  "torch >= 2.0.0,<3",
  # needed for python 3.10 support for not having assert_never in the standard library
  "typing-extensions >= 4.0",
]

[project.urls]
Homepage = "https://github.com/LeviSamuelEvans/nami"
Documentation = "https://levisamuelevans.github.io/nami/"
Repository = "https://github.com/LeviSamuelEvans/nami"
Issues = "https://github.com/LeviSamuelEvans/nami/issues"

[dependency-groups]
test = [
  "pytest >=9.0.0,<10",
  "pytest-cov >=7.0.0,<8",
]
lint = [
  "ruff >=0.15.5,<0.16",
]
typecheck = [
  "mypy >=1.19.0,<2",
]
build = [
  "hatch >=1.16.0,<2",
]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "typecheck" },
  { include-group = "build" },
]
docs = [
  "sphinx >=8.0.0,<9",
  "sphinx-autobuild >=2024.10.3,<2025",
  "pydata-sphinx-theme >=0.16.1,<0.17",
  "myst-nb >=1.1.0,<2",
  "sphinx-copybutton >=0.5.2,<0.6",
  "sphinx-autodoc-typehints >=3.2.0,<4",
  "sphinx-design >=0.7.0,<0.8",
]

[tool.pixi.workspace]
authors = ["Levi Evans <levi.samuel.evans@cern.ch>"]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.tasks]
setup = "python -m pip install -e ."
test = "pytest -q"
cov = "pytest --cov --cov-report=term-missing"
lint = "ruff check src tests"
fmt = "ruff format src tests"
typecheck = "ty check src"
# Editable install so Sphinx (conf.py) can ``import nami``. ``--no-deps``
# avoids pip re-fetching torch from PyPI on top of the conda-provided build.
docs-install = "python -m pip install -e . --no-deps -q"
docs = { cmd = "LC_ALL= LC_CTYPE= sphinx-build -a -E -b html docs docs/_build/html", depends-on = ["docs-install"] }
docs-rtd = { cmd = "LC_ALL= LC_CTYPE= sphinx-build -T -b html -d docs/_build/doctrees -D language=en docs $READTHEDOCS_OUTPUT/html", depends-on = ["docs-install"] }
docs-serve = { cmd = "LC_ALL= LC_CTYPE= sphinx-autobuild -a -E --host 127.0.0.1 --port 8001 --watch src/nami --ignore docs/books docs docs/_build/html", depends-on = ["docs-install"] }
build = "hatch build"
kernel = "python -m ipykernel install --user --name nami-dev"

[tool.pixi.environments]
default = { features = ["cpu", "docs", "lint", "test", "typecheck", "build", "experiments", "hooks"], solve-group = "cpu" }
cpu = { features = ["cpu", "docs", "lint", "test", "typecheck", "build", "experiments", "hooks"], solve-group = "cpu" }
gpu = { features = ["gpu", "docs", "lint", "test", "typecheck", "build", "experiments", "hooks"], solve-group = "gpu" }

[tool.pixi.dependencies]
python = ">=3.10,<3.14"
pip = ">=25.3,<26"
ipykernel = ">=7.1.0,<8"
matplotlib = ">=3.10.8,<4"
scipy = ">=1.17.0,<2"

[tool.pixi.pypi-dependencies]
marimo = ">=0.23.6,<0.24"

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = ">=2.0.0,<3"

[tool.pixi.feature.gpu]
platforms = ["linux-64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12"

[tool.pixi.feature.gpu.target.linux-64.dependencies]
pytorch-gpu = ">=2.0.0,<3"

[tool.pixi.feature.test.dependencies]
pytest = ">=9.0.0,<10"
pytest-cov = ">=7.0.0,<8"

[tool.pixi.feature.lint.dependencies]
ruff = ">=0.15.5,<0.16"
pylint = ">=4.0.0,<5"

[tool.pixi.feature.typecheck.dependencies]
ty = ">=0.0.33"

[tool.pixi.feature.build.dependencies]
hatch = ">=1.16.0,<2"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.0.0,<9"
sphinx-autobuild = ">=2024.10.3,<2025"
pydata-sphinx-theme = ">=0.16.1,<0.17"
myst-nb = ">=1.1.0,<2"
sphinx-copybutton = ">=0.5.2,<0.6"
sphinx-autodoc-typehints = ">=3.2.0,<4"
sphinx-design = ">=0.7.0,<0.8"

[tool.pixi.feature.experiments.dependencies]
ipykernel = ">=7.1.0,<8"
matplotlib = ">=3.10.8,<4"
scipy = ">=1.17.0,<2"
sbi = ">=0.26.1,<0.27"
imageio = ">=2.35.0,<3"

[tool.pixi.feature.hooks.dependencies]
pre-commit = "*"


[tool.hatch.build.targets.wheel]
packages = ["src/nami", "src/nami_toys"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/nami/_version.py"


[tool.hatch.envs.default]
dependency-groups = ["test"]
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]
markers = [
    "basic: marks tests as basic sanity checks",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring multiple components",
]


[tool.coverage]
run.source = ["nami"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
  'assert_never\(',
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.lint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
